--- a/src/pages/tasklist/tasklist.scss
+++ b/src/pages/tasklist/tasklist.scss
@@ -1,3 +1,15 @@
 page-task-list {
-	
+	.vertical-divider .apply:not(:first-child):after{
+		background: #DDDDDD;
+		bottom: 0;
+		content: " ";
+		position: absolute;
+		top: 0;
+		width: 1px;
+		height:auto;
+	}
+
+	.task-bottom-border .item-inner {
+		border-bottom : 0px !important;
+	}
 }
