--- a/src/pages/tasklist/tasklist.scss
+++ b/src/pages/tasklist/tasklist.scss
@@ -12,4 +12,8 @@ page-task-list {
 	.task-bottom-border .item-inner {
 		border-bottom : 0px !important;
 	}
+
+	.apply-border {
+		border-bottom : 1px solid  #DDDDDD;
+	}
 }
